# 01_Lab_Parser

./: CMakeLists.txt
JsonFiles/: WrongDebt.json
include/: student.hpp  table.hpp
sources/: student.cpp  table.cpp
tests/: test.cpp
